--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "babel-loader": "8.0.5",
     "react": "16.8.3",
     "react-dom": "16.8.3",
-    "react-router": "^4.3.1"
+    "react-router": "4.3.1"
   }
 }
